--- a/roles/ckan/tasks/main.yml
+++ b/roles/ckan/tasks/main.yml
@@ -23,5 +23,7 @@
    
    - include: setup-apache-vhosts.yml 
    
+   - include: configure-rsyslog.yml 
+   
    - service: name=apache2.service state=restarted
      become: yes
