Distinguish between the catalog and datapase part

--- a/hosts.yml.example
+++ b/hosts.yml.example
@@ -7,6 +7,16 @@ all:
     network: '10.17.4.0/24'
 
   children:
+
+    'database':
+      hosts:
+        'postgres-n1':
+          ansible_host: postgres-n1.internal
+          ansible_port: 22
+          fqdn: postgres-n1.internal
+          hostname: postgres-n1
+          ipv4_address: '10.17.4.46'
+    
     'ckan':
       hosts:
         'ckan':
