--- a/play-database.yml
+++ b/play-database.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: ckan
+- hosts: database
 
   vars:
  
@@ -13,7 +13,9 @@
   - apt: pkg=ca-certificates state=latest
     become: yes
 
-  - apt_key: url=https://www.postgresql.org/media/keys/ACCC4CF8.asc state=present
+  - apt_key:
+      url: https://www.postgresql.org/media/keys/ACCC4CF8.asc 
+      state: present
     become: yes
 
   - apt_repository:
